# ModelAnimation

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE.md  README.md  doxyconf
.travis/: build.sh
asset/: basketball.lua  city.lua
cfg/: imgui.ini
cmake/: Git.hpp.in
lib/: CMakeLists.txt
lib/fast-noise-simd/: CMakeLists.txt
lib/fastnoise-simd/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/imgui/include/imgui/: imgui_impl_allegro5.h  imgui_impl_dx10.h  imgui_impl_dx11.h  imgui_impl_dx12.h  imgui_impl_dx9.h  imgui_impl_glut.h  imgui_impl_marmalade.h  imgui_impl_metal.h  imgui_impl_opengl2.h  imgui_impl_osx.h  imgui_impl_sdl.h  imgui_impl_win32.h
lib/lua/: CMakeLists.txt
lib/stb/: CMakeLists.txt
script/: camera_control.lua
script/component/: camera_mouse_control.lua  debug.lua
script/scene/: default.lua
shader/: default.prog  terrain.frag  terrain.prog  terrain.vert
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Main.cpp  Main.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  Shader.cpp  Shader.hpp
src/afk/: Afk.cpp  Afk.hpp  CMakeLists.txt
src/afk/asset/: Asset.hpp  AssetFactory.cpp  AssetFactory.hpp  CMakeLists.txt
src/afk/component/: AnimationControlSystem.cpp  AnimationControlSystem.hpp  AnimationFrame.hpp  BaseComponent.hpp  CMakeLists.txt  GameObject.hpp  LuaScript.cpp  LuaScript.hpp  ScriptComponent.cpp  ScriptComponent.hpp  ScriptKeyboard.cpp  ScriptKeyboard.hpp  ScriptMouse.cpp  ScriptMouse.hpp  ScriptSetup.cpp  ScriptSetup.hpp  ScriptsComponent.cpp  ScriptsComponent.hpp
src/afk/components/: CMakeLists.txt  ScriptComponent.cpp  ScriptComponent.hpp  ScriptKeyboard.cpp  ScriptKeyboard.hpp  ScriptMouse.cpp  ScriptMouse.hpp
src/afk/debug/: Assert.hpp
src/afk/ecs/: GameObject.hpp
src/afk/event/: Event.hpp  EventManager.cpp  EventManager.hpp
src/afk/events/: CMakeLists.txt  Callback.hpp  Event.hpp  Events.cpp  Events.hpp
src/afk/io/: CMakeLists.txt  Log.cpp  Log.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelSource.cpp  ModelSource.hpp  Path.cpp  Path.hpp
src/afk/physics/: CMakeLists.txt  Collision.cpp  Collision.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsBodySystem.cpp  PhysicsBodySystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBodyType.hpp  Transform.cpp  Transform.hpp
src/afk/physics/shape/: Box.hpp  CMakeLists.txt  HeightMap.cpp  HeightMap.hpp  Sphere.hpp
src/afk/render/: CMakeLists.txt  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  MeshData.hpp  Model.cpp  Model.hpp  ModelData.cpp  ModelData.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderData.cpp  ShaderData.hpp  TextureData.cpp  TextureData.hpp
src/afk/render/opengl/: MeshHandle.hpp  ModelHandle.hpp  Renderer.cpp  Renderer.hpp  ShaderHandle.hpp  TextureHandle.hpp
src/afk/render/shader/: default.frag  default.vert
src/afk/renderer/: Animation.hpp  Bone.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GlfwDeleter.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelNode.hpp  ModelRenderSystem.cpp  ModelRenderSystem.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp
src/afk/renderer/opengl/: CMakeLists.txt  MeshHandle.hpp  ModelHandle.hpp  Renderer.cpp  Renderer.hpp  TextureHandle.hpp
src/afk/renderer/shader/: default.frag  default.prog
src/afk/script/: Bindings.cpp  Bindings.hpp  CMakeLists.txt  LuaInclude.hpp  Script.cpp  Script.hpp
src/afk/terrain/: CMakeLists.txt  TerrainGenerator.cpp  TerrainGenerator.hpp  TerrainManager.cpp  TerrainManager.hpp
src/afk/ui/: CMakeLists.txt  Log.cpp  Log.hpp  Ui.cpp  Ui.hpp  Unicode.hpp
src/afk/utility/: ArrayOf.hpp  Assert.cpp  Assert.hpp  CMakeLists.txt
src/shader/fragment/: default.glsl
